--- a/lab4/index.html
+++ b/lab4/index.html
@@ -46,5 +46,44 @@
 
     <p>Slika 13</p>
     <img src="images/13.jpg" alt="Slika 13">
+	
+	<p>Slika 14</p>
+    <img src="images/14.jpg" alt="Slika 14">
+	
+	<p>Slika 15</p>
+    <img src="images/15.jpg" alt="Slika 15">
+	
+	<p>Slika 16</p>
+    <img src="images/16.jpg" alt="Slika 16">
+	
+	<p>Slika 17</p>
+    <img src="images/17.jpg" alt="Slika 17">
+	
+	<p>Slika 18</p>
+    <img src="images/18.jpg" alt="Slika 18">
+	
+	<p>Slika 19</p>
+    <img src="images/19.jpg" alt="Slika 19">
+	
+	<p>Slika 20</p>
+    <img src="images/20.jpg" alt="Slika 20">
+	
+	<p>Slika 21</p>
+    <img src="images/21.jpg" alt="Slika 21">
+	
+	<p>Slika 22</p>
+    <img src="images/22.jpg" alt="Slika 22">
+	
+	<p>Slika 23</p>
+    <img src="images/23.jpg" alt="Slika 23">
+	
+	<p>Slika 24</p>
+    <img src="images/24.jpg" alt="Slika 24">
+	
+	<p>Slika 25</p>
+    <img src="images/25.jpg" alt="Slika 25">
+	
+	<p>Slika 26</p>
+    <img src="images/26.jpg" alt="Slika 26">
 </body>
 </html>
